--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1> This is hudai project </h1>
+    <h2> Programming shikhbo </h2>
+    <h3> Nipar Kaz </h3>
+    <h4> Nipar Workspace </h4>
+    <h5> Kaz with nipa </h5>
+    <h5> Work with nipa </h5>
+    <h6> NiparWork </h6>
+
     
 </body>
 </html>
