--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h5> Kaz with nipa </h5>
     <h5> Work with nipa </h5>
     <h6> NiparWork </h6>
+    <p> I learn html and css language </p>
 
     
 </body>
